[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/WinDialogs.gd" type="Script" id=1]
[ext_resource path="res://music/song.ogg" type="AudioStream" id=2]

[node name="WinDialogs" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PauseWin" type="PopupDialog" parent="."]
pause_mode = 2
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -57.0
margin_right = 88.0
margin_bottom = 57.0

[node name="PauseVbox" type="VBoxContainer" parent="PauseWin"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PauseLbl" type="Label" parent="PauseWin/PauseVbox"]
margin_right = 156.0
margin_bottom = 14.0
text = "KPUS"
align = 1

[node name="SettingsBtn" type="Button" parent="PauseWin/PauseVbox"]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 38.0
text = "KSET"

[node name="ResumeBtn" type="Button" parent="PauseWin/PauseVbox"]
margin_top = 42.0
margin_right = 156.0
margin_bottom = 62.0
text = "KRUS"

[node name="ExitBtn" type="Button" parent="PauseWin/PauseVbox"]
margin_top = 66.0
margin_right = 156.0
margin_bottom = 86.0
text = "KEXT"

[node name="CreditsWin" type="AcceptDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -133.5
margin_right = 174.0
margin_bottom = 133.5
window_title = "KCRE"
resizable = true

[node name="CreditsTxt" type="RichTextLabel" parent="CreditsWin"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[center]Created by
Anthony Wilcox

Music by
Augmentality

Clothing inspired by
Megawolf77
Canon Rhode
Raier

[img]assets/sixam_wordmark.png[/img]
sixam.xyz
[/center]"
text = "Created by
Anthony Wilcox

Music by
Augmentality

Clothing inspired by
Megawolf77
Canon Rhode
Raier


sixam.xyz
"
selection_enabled = true

[node name="SettingsWin" type="AcceptDialog" parent="."]
pause_mode = 2
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -34.0
margin_right = 76.0
margin_bottom = 34.0
window_title = "KSET"

[node name="Grid" type="GridContainer" parent="SettingsWin"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -26.0
margin_right = 68.0
margin_bottom = -2.0
columns = 3

[node name="Languages" type="MenuButton" parent="SettingsWin/Grid"]
visible = false
margin_right = 56.0
margin_bottom = 24.0
text = "KLANG"
flat = false
items = [ "KENG", null, 0, true, false, -1, 0, null, "", false, "KSWD", null, 0, false, false, -1, 0, null, "", false ]

[node name="MusicBtn" type="CheckBox" parent="SettingsWin/Grid"]
margin_right = 65.0
margin_bottom = 24.0
text = "KMUS"
align = 1

[node name="LicenseWin" type="AcceptDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -137.5
margin_right = 202.0
margin_bottom = 137.5
window_title = "KLIC"
resizable = true

[node name="LicenseTxt" type="RichTextLabel" parent="LicenseWin"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -194.0
margin_right = 194.0
margin_bottom = 231.0
bbcode_enabled = true
bbcode_text = "Nathan's Dress Up is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.

Nathan's Dress Up is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with Nathan's Dress Up. If not, see: https://www.gnu.org/licenses/

[center]##########################[/center]

Nathan's Dress Up (c) by Anthony Wilcox

Nathan's Dress Up is licensed under a Creative Commons
Attribution-ShareAlike 4.0 International License.

You should have received a copy of the license along with this work. 
If not, see <http://creativecommons.org/licenses/by-sa/4.0/>."
text = "Nathan's Dress Up is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.

Nathan's Dress Up is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with Nathan's Dress Up. If not, see: https://www.gnu.org/licenses/

##########################

Nathan's Dress Up (c) by Anthony Wilcox

Nathan's Dress Up is licensed under a Creative Commons
Attribution-ShareAlike 4.0 International License.

You should have received a copy of the license along with this work. 
If not, see <http://creativecommons.org/licenses/by-sa/4.0/>."

[connection signal="pressed" from="PauseWin/PauseVbox/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="PauseWin/PauseVbox/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PauseWin/PauseVbox/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="toggled" from="SettingsWin/Grid/MusicBtn" to="." method="_on_MusicBtn_toggled"]
